Align .NET and Angular to api spec
